RESOLVED FIXED165328
Regression(r209252): HTML interactive validation should not be enabled on iOS WK1 yet
https://bugs.webkit.org/show_bug.cgi?id=165328
Summary Regression(r209252): HTML interactive validation should not be enabled on iOS...
Chris Dumez
Reported 2016-12-02 13:29:09 PST
HTML interactive validation should not be enabled on iOS WK1 yet.
Attachments
Patch (1.45 KB, patch)
2016-12-02 13:51 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-12-02 13:51:59 PST
Chris Dumez
Comment 2 2016-12-02 14:17:39 PST
Comment on attachment 295993 [details] Patch Clearing flags on attachment: 295993 Committed r209267: <http://trac.webkit.org/changeset/209267>
Chris Dumez
Comment 3 2016-12-02 14:17:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.