Regression(r209252): HTML interactive validation should not be enabled on iOS WK1 yet https://bugs.webkit.org/show_bug.cgi?id=165328

Reviewed by Simon Fraser.

Only enable HTML interactive form validation on Mac WK1, not iOS WK1.

* WebView/WebViewData.mm:
(-[WebViewPrivate init]):

Canonical link: https://commits.webkit.org/182946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209267 268f45cc-cd09-0410-ab3c-d52691b4dbfc